v11/docs/ModelsSSHServersServerUpdateRequest.md
# ModelsSSHServersServerUpdateRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | **int32** |  | 
**UnderManagement** | Pointer to **NullableBool** |  | [optional] 
**Port** | Pointer to **NullableInt32** |  | [optional] 

## Methods

### NewModelsSSHServersServerUpdateRequest

`func NewModelsSSHServersServerUpdateRequest(id int32, ) *ModelsSSHServersServerUpdateRequest`

NewModelsSSHServersServerUpdateRequest instantiates a new ModelsSSHServersServerUpdateRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSSHServersServerUpdateRequestWithDefaults

`func NewModelsSSHServersServerUpdateRequestWithDefaults() *ModelsSSHServersServerUpdateRequest`

NewModelsSSHServersServerUpdateRequestWithDefaults instantiates a new ModelsSSHServersServerUpdateRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsSSHServersServerUpdateRequest) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsSSHServersServerUpdateRequest) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsSSHServersServerUpdateRequest) SetId(v int32)`

SetId sets Id field to given value.


### GetUnderManagement

`func (o *ModelsSSHServersServerUpdateRequest) GetUnderManagement() bool`

GetUnderManagement returns the UnderManagement field if non-nil, zero value otherwise.

### GetUnderManagementOk

`func (o *ModelsSSHServersServerUpdateRequest) GetUnderManagementOk() (*bool, bool)`

GetUnderManagementOk returns a tuple with the UnderManagement field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUnderManagement

`func (o *ModelsSSHServersServerUpdateRequest) SetUnderManagement(v bool)`

SetUnderManagement sets UnderManagement field to given value.

### HasUnderManagement

`func (o *ModelsSSHServersServerUpdateRequest) HasUnderManagement() bool`

HasUnderManagement returns a boolean if a field has been set.

### SetUnderManagementNil

`func (o *ModelsSSHServersServerUpdateRequest) SetUnderManagementNil(b bool)`

 SetUnderManagementNil sets the value for UnderManagement to be an explicit nil

### UnsetUnderManagement
`func (o *ModelsSSHServersServerUpdateRequest) UnsetUnderManagement()`

UnsetUnderManagement ensures that no value is present for UnderManagement, not even an explicit nil
### GetPort

`func (o *ModelsSSHServersServerUpdateRequest) GetPort() int32`

GetPort returns the Port field if non-nil, zero value otherwise.

### GetPortOk

`func (o *ModelsSSHServersServerUpdateRequest) GetPortOk() (*int32, bool)`

GetPortOk returns a tuple with the Port field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPort

`func (o *ModelsSSHServersServerUpdateRequest) SetPort(v int32)`

SetPort sets Port field to given value.

### HasPort

`func (o *ModelsSSHServersServerUpdateRequest) HasPort() bool`

HasPort returns a boolean if a field has been set.

### SetPortNil

`func (o *ModelsSSHServersServerUpdateRequest) SetPortNil(b bool)`

 SetPortNil sets the value for Port to be an explicit nil

### UnsetPort
`func (o *ModelsSSHServersServerUpdateRequest) UnsetPort()`

UnsetPort ensures that no value is present for Port, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


